Service.yml
kind: Service
apiVersion: v1
metadata:
  name: grupo20-java-api
  namespace: entrega-grupo-20
  uid: 332e30e3-1e77-4edb-be03-10d9a13a03c3
  resourceVersion: '894376688'
  creationTimestamp: '2022-04-09T20:00:49Z'
  labels:
    app: grupo20-java-api
    app.kubernetes.io/component: grupo20-java-api
    app.kubernetes.io/instance: grupo20-java-api
    app.kubernetes.io/name: grupo20-java-api
    app.kubernetes.io/part-of: grupo20-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-04-09T20:00:49Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.187.30
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.187.30
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: grupo20-java-api
    deploymentconfig: grupo20-java-api
status:
  loadBalancer: {}
